# GLU-NTK

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/ntk/: ntk_eigen_mixer.py  ntk_eigen_mlp.py  ntk_eigen_vit.py
scripts/plot/: plot_condition_number_bar+scatter.py  plot_condition_number_from_csv.py  plot_gap_scatter_augmented.py  plot_loss_mlp_gauss.py  plot_loss_mlp_mnist.py  plot_ntk_heatmap.py  plot_training_dynamics.py
scripts/train/: train_activation_gap.py  train_activation_mlp.py
src/ntk/: __init__.py  data.py  utils.py
src/ntk/models/: __init__.py  mlp.py  mlp_mixer.py  vit.py
