[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-ntk"
version = "0.1.0"
description = "Research code for activation-function, training dynamics, and NTK-condition experiments."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "einops",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

